homelab/atlantis/network-policies/allow-internal-s3-traffic.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-internal-s3-traffic
spec:
  endpointSelector:
    matchLabels:
      network-policy/allow-internal-s3-traffic: apply
  ingress:
    - fromEndpoints:
        - matchLabels:
            storage/tenant: default
            io.kubernetes.pod.namespace: storage
  egress:
    - toEndpoints:
        - matchLabels:
            storage/tenant: default
            io.kubernetes.pod.namespace: storage
