homelab/atlantis/network-policies/allow-world-egress.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-world-egress
spec:
  endpointSelector:
    matchLabels:
      app: atlantis
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
