homelab/atlantis/network-policies/default-deny-egress.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
    name: default-deny-egress
spec:
    endpointSelector: {}
    egress:
        - toEndpoints:
              - matchLabels:
                    "k8s:io.kubernetes.pod.namespace": kube-system
                    "k8s:k8s-app": kube-dns
          toPorts:
              - ports:
                    - port: "53"
                      protocol: ANY
                rules:
                    dns:
                        - matchPattern: "*"
        - toEndpoints:
              - matchLabels:
                    app.kubernetes.io/instance: traefik-traefik
                    app.kubernetes.io/name: traefik
                    io.kubernetes.pod.namespace: traefik
